Implement quoting in GS_OPTIONS environment variable. Bug 688965.

DETAILS:
Old code treated quotes in GS_OPTIONS as regular characters
and not used them for quoting spaces. New code distinguish
between a single already parsed argument, retrieved by a previous
call to arg_next() and unparsed list of arguments from GS_OPTIONS.
Thanks to SaGS for the patch.

DIFFERENCES:
None

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@8051 a1074d23-0009-0410-80fe-cf8c14f379e6